--- a/GUMS/GUMS.csproj
+++ b/GUMS/GUMS.csproj
@@ -15,6 +15,7 @@
         </PackageReference>
         <PackageReference Include="SQLitePCLRaw.bundle_e_sqlcipher" Version="2.1.10" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0" />
+        <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="10.0.1" />
     </ItemGroup>
 
 </Project>
